ASSIGNMENT-1/ASTRO-TEST-NETWORK-CFT.yml
AWSTemplateFormatVersion: '2010-09-09'
Description: AWS CFN to build network components of the environment.
Parameters:
  CLIENTNAME:
    Default: ASTRO
    Description: To be used for tagging resources.
    Type: String

  ENVIROMETNAME:
    Default: TEST
    Description: 'Either Prod, Staging, Demo etc. To be used for tagging resorces.'
    Type: String

  VPCCIDRBLOCK:
    Default: 10.0.0.0/16
    Description: CIDR block of VPC being created
    Type: String
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid private CIDR range.

  PUBLICSBCIDRA:
    Default: 10.0.0.0/24
    Description: CIDR block of Public Subnet in AZ A
    Type: String
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid private CIDR range.

  PUBLICSBCIDRB:
    Default: 10.0.1.0/24
    Description: CIDR block of Public Subnet in AZ B
    Type: String
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid private CIDR range.

  PRIVATESBCIDRA:
    Default: 10.0.11.0/24
    Description: CIDR block of Web Subnet in AZ A
    Type: String
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid private CIDR range.

  DBPRIVATESBCIDRA:
    Default: 10.0.21.0/24
    Description: CIDR block of DB Subnet in AZ A
    Type: String
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid private CIDR range.

  DBPRIVATESBCIDRB:
    Default: 10.0.22.0/24
    Description: CIDR block of DB Subnet in AZ B
    Type: String
    AllowedPattern: '(\d{1,3})\.(\d{1,3})\.(\d{1,3})\.(\d{1,3})/(\d{1,2})'
    ConstraintDescription: Must be a valid private CIDR range.

  AvailabilityZoneParameterPublicA:
    Description: Enter the availability zone for PUBLIC-SB-A
    Default: '-'
    Type: 'AWS::EC2::AvailabilityZone::Name'

  AvailabilityZoneParameterPublicB:
    Description: Enter the availability zone for PUBLIC-SB-B
    Default: '-'
    Type: 'AWS::EC2::AvailabilityZone::Name'

  AvailabilityZoneParameterPrivate:
    Description: Enter the availability zone for PRIVATE-SB-A
    Default: '-'
    Type: 'AWS::EC2::AvailabilityZone::Name'

  AvailabilityZoneParameterDatabase:
    Description: Enter the availability zone for DATABASE-SB-A
    Default: '-'
    Type: 'AWS::EC2::AvailabilityZone::Name'
      
  AvailabilityZoneParameterDatabase:
    Description: Enter the availability zone for DATABASE-SB-B
    Default: '-'
    Type: 'AWS::EC2::AvailabilityZone::Name'


Resources:
  VPC:
    Type: 'AWS::EC2::VPC'
    Properties:
      CidrBlock:
        Ref: VPCCIDRBLOCK
      EnableDnsSupport: 'true'
      EnableDnsHostnames: 'false'
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - VPC
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
       
  PUBLICSBA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone:
        Ref: AvailabilityZoneParameterPublicA
      CidrBlock:
        Ref: PUBLICSBCIDRA
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - PUBLIC-SIUBNET-A
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
        
      VpcId:
        Ref: VPC

  PUBLICSBB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone:
        Ref: AvailabilityZoneParameterPublicB
      CidrBlock:
        Ref: PUBLICSBCIDRB
      MapPublicIpOnLaunch: 'true'
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - PUBLIC-SIUBNET-B
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
      VpcId:
        Ref: VPC

  PRIVATESBA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone:
        Ref: AvailabilityZoneParameterPrivate
      CidrBlock:
        Ref: PRIVATESBCIDRA
      MapPublicIpOnLaunch: 'false'
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - PRIVATE-SUBNET-A
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
        
      VpcId:
        Ref: VPC

  DBPRIVATESBA:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone:
        Ref: AvailabilityZoneParameterDatabase
      CidrBlock:
        Ref: DBPRIVATESBCIDRA
      MapPublicIpOnLaunch: 'false'
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - DB-SUBNET-A
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
        
      VpcId:
        Ref: VPC


  DBPRIVATESBB:
    Type: 'AWS::EC2::Subnet'
    Properties:
      AvailabilityZone:
        Ref: AvailabilityZoneParameterDatabase
      CidrBlock:
        Ref: DBPRIVATESBCIDRB
      MapPublicIpOnLaunch: 'false'
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - DB-SUBNET-B
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
        
      VpcId:
        Ref: VPC

  IGW:
    Type: 'AWS::EC2::InternetGateway'
    Properties:
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - IGW
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
     
  VPCIGWAttachment:
    Type: 'AWS::EC2::VPCGatewayAttachment'
    Properties:
      InternetGatewayId:
        Ref: IGW
      VpcId:
        Ref: VPC

  PUBLICRT:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - PUBLIC-ROUTE-TABLE
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
     
  PUBLICRTENTRY:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId:
        Ref: IGW
      RouteTableId:
        Ref: PUBLICRT

  PUBLICRTSBASSOA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId:
        Ref: PUBLICRT
      SubnetId:
        Ref: PUBLICSBA

  PUBLICRTSBASSOB:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId:
        Ref: PUBLICRT
      SubnetId:
        Ref: PUBLICSBB

  EIP:
    Type: 'AWS::EC2::EIP'
    Properties:
      Domain:
        Ref: VPC

  NATGW:
    Type: 'AWS::EC2::NatGateway'
    Properties:
      AllocationId:
        'Fn::GetAtt':
          - EIP
          - AllocationId
      SubnetId:
        Ref: PUBLICSBA
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - NAT-GATEWAY
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
       
  PRIVATERT:
    Type: 'AWS::EC2::RouteTable'
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - PRIVATE-ROUTE-TABLE
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
     
  PRIVATERTENTRY:
    Type: 'AWS::EC2::Route'
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId:
        Ref: NATGW
      RouteTableId:
        Ref: PRIVATERT

  PRIVATERTSBASSOA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId:
        Ref: PRIVATERT
      SubnetId:
        Ref: PRIVATESBA  

  DBPRIVATERTSBASSOA:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId:
        Ref: PRIVATERT
      SubnetId:
        Ref: DBPRIVATESBA

  DBPRIVATERTSBASSOB:
    Type: 'AWS::EC2::SubnetRouteTableAssociation'
    Properties:
      RouteTableId:
        Ref: PRIVATERT
      SubnetId:
        Ref: DBPRIVATESBB

  PUBLICNACL:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - PUBLIC-NETWORK-ACL
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
      
  PUBLICNACLENTRYA:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId:
        Ref: PUBLICNACL
      RuleNumber: '100'
      Protocol: '-1'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0

  PUBLICNACLENTRYB:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId:
        Ref: PUBLICNACL
      RuleNumber: '100'
      Protocol: '-1'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0

  PUBLICNACLASSOA:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId:
        Ref: PUBLICSBA
      NetworkAclId:
        Ref: PUBLICNACL

  PUBLICNACLASSOB:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId:
        Ref: PUBLICSBB
      NetworkAclId:
        Ref: PUBLICNACL

  PRIVATENACL:
    Type: 'AWS::EC2::NetworkAcl'
    Properties:
      VpcId:
        Ref: VPC
      Tags:
        - Key: Name
          Value:
            'Fn::Join':
              - '-'
              - - Ref: CLIENTNAME
                - Ref: ENVIROMETNAME
                - PRIVATE-NETWORK-ACL
        - Key: Environment
          Value:
            Ref: ENVIROMETNAME
       
  PRIVATENACLENTRYA:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId:
        Ref: PRIVATENACL
      RuleNumber: '100'
      Protocol: '-1'
      RuleAction: allow
      Egress: 'true'
      CidrBlock: 0.0.0.0/0

  PRIVATENACLENTRYB:
    Type: 'AWS::EC2::NetworkAclEntry'
    Properties:
      NetworkAclId:
        Ref: PRIVATENACL
      RuleNumber: '100'
      Protocol: '-1'
      RuleAction: allow
      Egress: 'false'
      CidrBlock: 0.0.0.0/0

  PRIVATENACLASSOA:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId:
        Ref: PRIVATESBA
      NetworkAclId:
        Ref: PRIVATENACL

  DBPRIVATENACLASSOA:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId:
        Ref: DBPRIVATESBA
      NetworkAclId:
        Ref: PRIVATENACL
     
  DBPRIVATENACLASSOB:
    Type: 'AWS::EC2::SubnetNetworkAclAssociation'
    Properties:
      SubnetId:
        Ref: DBPRIVATESBB
      NetworkAclId:
        Ref: PRIVATENACL

Outputs:
  VPCOP:
    Description: VPC ID being created
    Value:
      Ref: VPC
    Export:
      Name: ASTRO-TEST-VPC

  PUBLICSBAOP:
    Description: Subnet ID of Public Subnet A
    Value:
      Ref: PUBLICSBA
    Export:
      Name: ASTRO-TEST-PUBLIC-SUBNET-A

  PUBLICSBBOP:
    Description: Subnet ID of Public Subnet B
    Value:
      Ref: PUBLICSBB
    Export:
      Name: ASTRO-TEST-PUBLIC-SUBNET-B

  PRIVATESBAOP:
    Description: Subnet ID of PRIVATE Subnet A
    Value:
      Ref: PRIVATESBA
    Export:
      Name: ASTRO-TEST-PRIVATE-SUBNET-A

  DBPRIVATESUBNETA:
    Description: Subnet ID of Database Subnet A
    Value:
      Ref: DBPRIVATESBA
    Export:
      Name: ASTRO-TEST-DB-PRIVATE-SUBNET-A

  DBPRIVATESUBNETB:
    Description: Subnet ID of Database Subnet B
    Value:
      Ref: DBPRIVATESBA
    Export:
      Name: ASTRO-TEST-DB-PRIVATE-SUBNET-B
  
  CLIENTNAME:
    Description: NAME OF THE CLIENT
    Value:
      Ref: CLIENTNAME
    Export:
      Name: CLIENTNAME

  ENVIROMETNAME:
    Description: NAME OF THE ENVIROMET 
    Value:
      Ref: ENVIROMETNAME
    Export:
      Name: ENVIROMETNAME
